--- a/src/components/Day/style.css
+++ b/src/components/Day/style.css
@@ -17,7 +17,7 @@
 
 .main {
   position: relative;
-  border-top: 0.5px solid rgb(128, 123, 123);
+  border: thin ridge #BDBDBD;
 }
 
 .Plans {
@@ -29,4 +29,5 @@
   bottom: 0;
   margin-left: 3%;
   margin-Right: 3%;
+  pointer-events: none;
 }
