--- a/src/components/Hour/style.css
+++ b/src/components/Hour/style.css
@@ -1,11 +1,11 @@
 .Hour {
-  background-color: beige;
+  background-color: #FFFDE7;
 }
 
 .Hour.saturday {
-  background-color: rgb(213, 213, 243)
+  background-color: #E3F2FD
 }
 
 .Hour.sunday {
-  background-color: rgb(247, 211, 219)
+  background-color: #ffebee
 }
